--- a/src/components/Homepage/UserSummary.scss
+++ b/src/components/Homepage/UserSummary.scss
@@ -1,6 +1,5 @@
-summary-main{
+.summary-main{
     width: 100%;
-    // overflow: hidden;
 }
 
 #USERS {
