--- a/src/components/Layout/Home.scss
+++ b/src/components/Layout/Home.scss
@@ -1,21 +1,21 @@
 .home {
     display: flex;
-    overflow: hidden;
+    overflow-y: hidden;
     height: 43rem;
 }
 .user-main {
-    // overflow: hidden;
     position: relative;
     margin: 1rem 3rem;
-    width: 100%;
-    height: 40rem;
     letter-spacing: 1px;
+    width: 65.6rem;
+    height: 40rem;
     overflow-y: scroll;
+    // overflow-x: hidden;
     @media(max-width:940px){
     position: absolute;
     z-index: 0;
     width: 90%;
-    margin: 2rem 3rem;
-
+    margin: 1rem 2rem;
+    box-sizing: border-box;
     }
 }
